@@ -105,6 +105,7 @@
 
 0.15.10 release
 
+	* fixed UDP socket error handling on windows
 	* fixed peer_tos (type of service) setting
 	* fixed crash when loading resume file with more files than the torrent in it
 	* fix invalid-parameter error on windows when disabling filesystem disk cache
